cmake_minimum_required(VERSION 3.5)
project(effectivecpp)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -w")
SET (CMAKE_C_COMPILER  "/usr/bin/clang")
SET(CMAKE_CXX_COMPILER "clang++")
aux_source_directory(. DIR_SRCS)
include_directories ("${PROJECT_SOURCE_DIR}/")


add_executable(ch3 ch3.cc)
add_executable(ch3_cast ch3_cast转型.cc)
add_executable(ch4 ch4.cc)
add_executable(ch5 ch5.cc)
add_executable(ch7 ch7.cc)
add_executable(ch8 ch8.cc)
add_executable(ch9 ch9.cc)
add_executable(ch10 ch10.cc)
add_executable(ch11 ch11.cc)
add_executable(ch12 ch12.cc)
add_executable(ch13 ch13.cc)
add_executable(ch14 ch14.cc)
add_executable(ch16 ch16.cc)
add_executable(ch20 ch20.cc)
#target_link_libraries(effectivecpp pthread)