
add_executable(listing_2.1 listing_2.1.cpp)
add_executable(listing_2.2 listing_2.2.cpp)
add_executable(listing_2.3 listing_2.3.cpp)
add_executable(listing_2.4 listing_2.4.cpp)
add_executable(listing_2.5 listing_2.5.cpp)
add_executable(listing_2.6 listing_2.6.cpp)
add_executable(listing_2.7 listing_2.7.cpp)
add_executable(listing_2.8 listing_2.8.cpp)
add_executable(listing_2.8_id listing_2.8_id.cpp)