
add_executable(listing_5.0.3_atomic_default listing_5.0.3_atomic_default.cpp)
add_executable(listing_5.0.4_atomic_flag_test_and_set listing_5.0.4_atomic_flag_test_and_set.cpp)

add_executable(listing_5.1.1 listing_5.1.1.cpp)
add_executable(listing_5.1.2 listing_5.1.2.cpp)
add_executable(listing_5.1.3 listing_5.1.3.cpp)